--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,24 @@
 	
 	</dependencies>
 	
+	
+	<repositories>
+	
+		<repository>
+		  <id>biosd-repo</id>
+		  <name>EBI Nexus Repository for BioSD public stuff</name>
+		  <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/biosamples</url>
+		</repository>
+ 
+		<repository>
+		  <id>biosd-repo-snapshots</id>
+		  <name>EBI Nexus Repository for BioSD public stuff, Snapshots</name>
+		  <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/biosamples-snapshots</url>
+		</repository>
+	
+	</repositories>
+	
+	
 	<build>
 
 		<plugins>
