Moving to GH Maven repo.

--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <github.global.server>github</github.global.server>
   </properties>
 
   <scm>
   	<developerConnection>scm:git:git@github.com:EBIBioSamples/onto-discovery-api.git</developerConnection>
-    <tag>0.0.1-SNAPSHOT</tag>
   </scm>   
 
 	<dependencies>
@@ -68,6 +68,19 @@
 	
 	</repositories>
 	
+	<distributionManagement>
+
+		<!-- As per http://stackoverflow.com/questions/14013644/hosting-a-maven-repository-on-github -->
+
+	  <snapshotRepository>
+	    <id>internal.repo</id>
+	    <name>Temporary Staging Repository</name>
+	    <url>file://${project.build.directory}/maven-repo</url>
+	    <uniqueVersion>false</uniqueVersion>
+	  </snapshotRepository>
+	
+	</distributionManagement>
+	
 	
 	<build>
 
@@ -82,16 +95,31 @@
 	      </configuration>
 	    </plugin>
 	    
-			<!-- plugin>
-			  <artifactId>maven-release-plugin</artifactId>
-			  <version>2.4.1</version>
-			  <configuration>
-			    <useReleaseProfile>false</useReleaseProfile>
-			    <releaseProfiles>release</releaseProfiles>
-			    <autoVersionSubmodules>true</autoVersionSubmodules>
-			  </configuration>
-			</plugin -->
-    	    
+
+			<!-- As per http://stackoverflow.com/questions/14013644/hosting-a-maven-repository-on-github -->
+			<plugin>
+	      <groupId>com.github.github</groupId>
+	      <artifactId>site-maven-plugin</artifactId>
+	      <version>0.11</version>
+	      <configuration>
+	        <message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+	        <noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+	        <outputDirectory>${project.build.directory}/maven-repo</outputDirectory>
+	        <branch>refs/heads/maven-repo</branch>
+	        <includes><include>**/*</include></includes>
+	        <repositoryName>EBIBioSamples.github.io</repositoryName>      <!-- github repo name -->
+	        <repositoryOwner>EBIBioSamples</repositoryOwner>    <!-- github username  -->
+	      </configuration>
+	      <executions>
+	        <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+	        <execution>
+	          <goals>
+	            <goal>site</goal>
+	          </goals>
+	          <phase>deploy</phase>
+	        </execution>
+	      </executions>
+      </plugin>    	    
 
 		</plugins>
 
