--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
 
   <groupId>uk.ac.ebi</groupId>
   <artifactId>onto-discovery-api</artifactId>
-
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -50,7 +49,7 @@
 		<dependency>
 			<groupId>uk.ac.ebi</groupId>
 			<artifactId>jutils</artifactId>
-			<version>4.3.1-SNAPSHOT</version>
+			<version>4.4.1-SNAPSHOT</version>
 		</dependency>
 		
 	
@@ -60,16 +59,12 @@
 	<repositories>
 	
 		<repository>
-		  <id>biosd-repo</id>
-		  <name>EBI Nexus Repository for BioSD public stuff</name>
-		  <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/biosamples</url>
-		</repository>
- 
-		<repository>
-		  <id>biosd-repo-snapshots</id>
-		  <name>EBI Nexus Repository for BioSD public stuff, Snapshots</name>
-		  <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/biosamples-snapshots</url>
-		</repository>
+	    <id>EBIBioSamples-GH-repo</id>
+	    <url>https://raw.githubusercontent.com/EBIBioSamples/EBIBioSamples.github.io/maven-repo</url>
+	    <snapshots>
+	      <enabled>true</enabled>
+	    </snapshots>
+	  </repository>
 	
 	</repositories>
 	
