Cache will store all annotations (even empty ones), but if what is stored is an empty list, it will search further for an annotation

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
   	<developerConnection>scm:git:git@github.com:EBIBioSamples/onto-discovery-api.git</developerConnection>
   </scm>
 
+	<parent>
+	  <groupId>uk.ac.ebi.fg.biosd</groupId>
+	  <artifactId>biosd_deploy</artifactId>
+	  <version>1.0-SNAPSHOT</version>
+	</parent>
+
 	<dependencies>
 
 	  <dependency>
